--- a/workshops/week-08/nextjs-playground/package.json
+++ b/workshops/week-08/nextjs-playground/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.22.0",
     "next": "15.3.3",
     "pg": "^8.16.0",
     "react": "^19.0.0",
